--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 .image-background {
     height: 650px;
     min-height: 500px;
-    background-image: url("images/image_2.jpg");
+    background-image: url("image_2.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
